--- a/.github/workflows/main-compile.yml
+++ b/.github/workflows/main-compile.yml
@@ -22,6 +22,22 @@ jobs:
           export CGO_ENABLED=1
           sudo apt-get update
           sudo apt-get install -y build-essential
-          
+
       - name: Compile Go program
         run: go build main.go
+
+      - name: Upload file
+        uses: actions/upload-artifact@v2
+        with:
+          name: main
+          path: ./main  # 替换为实际的编译后文件的路径
+      
+      - name: Create archive
+        run: |
+          tar -czf archive.tar.gz ./main ./config/* --exclude="*.go"
+          
+      - name: Upload archive
+        uses: actions/upload-artifact@v2
+        with:
+          name: archive
+          path: archive.tar.gz
