--- a/.github/workflows/main-compile.yml
+++ b/.github/workflows/main-compile.yml
@@ -23,6 +23,21 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential
 
+      - name: Cache Go modules
+        id: cache-go-mod
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Install dependencies
+        if: steps.cache-go-mod.outputs.cache-hit != 'true'
+        run: go mod download
+
       - name: Compile Go program
         run: go build main.go
 
@@ -34,10 +49,18 @@ jobs:
       
       - name: Create archive
         run: |
-          tar -czf archive.tar.gz ./main ./config/* --exclude="*.go"
-          
+          tar --exclude='*.go' -zcvf archive.tar.gz ./main ./config
+
       - name: Upload archive
         uses: actions/upload-artifact@v2
         with:
           name: archive
           path: archive.tar.gz
+        
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        with:
+          tag_name: "v${{ github.ref_name }}"
+          release_name: "Version ${{ github.ref_name }}"
+          body: "This is the release for ${{ github.ref_name }}"
+          artifacts: "archive.tar.gz"
